# qubership-apihub-sniffer-agent

./: .gitignore  Dockerfile  README.md  build_docker_image.cmd  build_golang_binary.cmd
.github/: dependabot.yml
.github/workflows/: ci.yml
capture-app/: go.mod  main.go
capture-app/capture-cpp/: CMakeLists.txt  appConfig.cpp  appConfig.h  capture.cpp  pcap_reader.c
docs/: APIHUB sniffer E2E.postman_collection.json  File_storage.md  README.md  installation-notes.md  usage-scenario.md
docs/api/: interface.yaml
helm-templates/: README.md
helm-templates/local-k8s-quickstart/: README.md  quickstart.sh
helm-templates/local-k8s-quickstart/minio/: minio-tenant-local-values.yaml
helm-templates/local-k8s-quickstart/qubership-apihub-sniffer-agent/: local-k8s-values.yaml  local-minio-secrets.yaml.template  local-sniffer-secrets.yaml.template
helm-templates/local-k8s-quickstart/scripts/: 0-lib.sh  1-deploy-minio-operator.sh  2-deploy-minio-tenant.sh  3-deploy-sniffer-agent.sh
helm-templates/qubership-apihub-sniffer-agent/: Chart.yaml  README.md  values.yaml
helm-templates/qubership-apihub-sniffer-agent/templates/: DaemonSet.yaml  Ingress.yaml  RoleBinding.yaml  Secret.yaml  SecretKeys.yaml  SecretMinio.yaml  SecretS3storage.yaml  Service.yaml  ServiceAccount.yaml
parser-app/: go.mod  main.go
parser-app/Cache/: HttpHeadersCache.go  PacketCache.go  PeersCache.go  PeersCache_test.go
parser-app/db/: connection.go
parser-app/entities/: EndPoint.go  HeaderItem.go  Packet.go  ParsedPacket.go
parser-app/readers/: CaptureReader.go
parser-app/utils/: payloadType.go
qubership-apihub-sniffer-agent/: config.yaml  go.mod  service.go
qubership-apihub-sniffer-agent/controllers/: CaptureController.go  README.md
qubership-apihub-sniffer-agent/entities/: CachedItem.go  CaptureControllerConfig.go  CaptureRequestInternal.go  CaptureRequestInternal_test.go  CaptureServiceConfig.go  CloudService.go  Constants.go  DiscoveryConfig.go  MinioStorageCreds.go  README.md
qubership-apihub-sniffer-agent/exception/: CustomError.go  ErrorCodes.go
qubership-apihub-sniffer-agent/services/: README.md
qubership-apihub-sniffer-agent/services/capture/: capture.go
qubership-apihub-sniffer-agent/services/cloud_storage/: cloud_storage.go
qubership-apihub-sniffer-agent/services/disk_cache/: DiskCache.go  DiskCache_test.go
qubership-apihub-sniffer-agent/services/kube_service/: KubeService.go  NamespacePods.go  NamespaceUtils.go
qubership-apihub-sniffer-agent/services/name_resolver/: NameResolver.go
qubership-apihub-sniffer-agent/utils/: GoRoutines.go  README.md
qubership-apihub-sniffer-agent/view/: CallResult.go  CaptureRequest.go  CaptureRequest_test.go  Constants.go  README.md
(+2 files in other folders)
